load(
    "@bazel_skylib//rules:build_test.bzl",
    "build_test",
)
load(
    "@joneshf_rules_purescript//purescript:defs.bzl",
    "purescript_package",
)

build_test(
    name = "bar_package_test",
    targets = [
        ":bar_package",
    ],
)

build_test(
    name = "bar_test",
    targets = [
        ":bar",
    ],
)

build_test(
    name = "baz_package_test",
    targets = [
        ":baz_package",
    ],
)

build_test(
    name = "baz_test",
    targets = [
        ":baz",
    ],
)

build_test(
    name = "corge_package_test",
    targets = [
        ":corge_package",
    ],
)

build_test(
    name = "corge_test",
    targets = [
        ":corge",
    ],
)

build_test(
    name = "foo_package_test",
    targets = [
        ":foo_package",
    ],
)

build_test(
    name = "foo_test",
    targets = [
        ":foo",
    ],
)

build_test(
    name = "grault_package_test",
    targets = [
        ":grault_package",
    ],
)

build_test(
    name = "grault_test",
    targets = [
        ":grault",
    ],
)

build_test(
    name = "qux_package_test",
    targets = [
        ":qux_package",
    ],
)

build_test(
    name = "qux_test",
    targets = [
        ":qux",
    ],
)

# If we wanted to manage all of the flags and the usage of `purs-compile` by hand,
# we can use a `genrule` like below.
# This is largely to show how it's _possible_ to pass flags around.
# Usage of `purs-compile` should be automated by some other tooling.
genrule(
    name = "bar",
    srcs = [
        ":foo",
        "Bar.purs",
    ],
    outs = [
        "output-bar",
    ],
    cmd = " ".join(
        [
            "$(execpath //cmd/purs-compile)",
            "--include $(execpath :foo)",
            "--output $@",
            "$(execpath Bar.purs)",
        ],
    ),
    tools = [
        "//cmd/purs-compile",
    ],
)

genrule(
    name = "baz",
    srcs = [
        ":bar",
        "Baz.purs",
    ],
    outs = [
        "output-baz",
    ],
    cmd = " ".join(
        [
            "$(execpath //cmd/purs-compile)",
            "--include $(execpath :bar)",
            "--output $@",
            "$(execpath Baz.purs)",
        ],
    ),
    tools = [
        "//cmd/purs-compile",
    ],
)

genrule(
    name = "corge",
    srcs = [
        ":qux",
        "Corge.purs",
    ],
    outs = [
        "output-corge",
    ],
    cmd = " ".join(
        [
            "$(execpath //cmd/purs-compile)",
            "--include $(execpath :qux)",
            "--output $@",
            "$(execpath Corge.purs)",
        ],
    ),
    tools = [
        "//cmd/purs-compile",
    ],
)

genrule(
    name = "foo",
    srcs = [
        "Foo.purs",
    ],
    outs = [
        "output-foo",
    ],
    cmd = " ".join(
        [
            "$(execpath //cmd/purs-compile)",
            "--output $@",
            "$(execpath Foo.purs)",
        ],
    ),
    tools = [
        "//cmd/purs-compile",
    ],
)

genrule(
    name = "grault",
    srcs = [
        ":corge",
        "Grault.purs",
    ],
    outs = [
        "output-grault",
    ],
    cmd = " ".join(
        [
            "$(execpath //cmd/purs-compile)",
            "--include $(execpath :corge)",
            "--output $@",
            "$(execpath Grault.purs)",
        ],
    ),
    tools = [
        "//cmd/purs-compile",
    ],
)

genrule(
    name = "qux",
    srcs = [
        ":baz",
        "Qux.purs",
    ],
    outs = [
        "output-qux",
    ],
    cmd = " ".join(
        [
            "$(execpath //cmd/purs-compile)",
            "--include $(execpath :baz)",
            "--output $@",
            "$(execpath Qux.purs)",
        ],
    ),
    tools = [
        "//cmd/purs-compile",
    ],
)

# If we don't want to manage everything ourselves,
# we can use rules like below.
# This is more likely how we'd actually want to interact with `bazel`.
purescript_package(
    name = "bar_package",
    srcs = [
        "Bar.purs",
    ],
    deps = [
        ":foo_package",
    ],
)

purescript_package(
    name = "baz_package",
    srcs = [
        "Baz.purs",
    ],
    deps = [
        ":bar_package",
    ],
)

purescript_package(
    name = "corge_package",
    srcs = [
        "Corge.purs",
    ],
    deps = [
        ":qux_package",
    ],
)

purescript_package(
    name = "foo_package",
    srcs = [
        "Foo.purs",
    ],
)

purescript_package(
    name = "grault_package",
    srcs = [
        "Grault.purs",
    ],
    deps = [
        ":corge_package",
    ],
)

purescript_package(
    name = "qux_package",
    srcs = [
        "Qux.purs",
    ],
    deps = [
        ":baz_package",
    ],
)
