load(
    ":actions_tests.bzl",
    "purs_bundle_tests_suite",
    "purs_compile_module_tests_suite",
)
load(
    ":rules_tests.bzl",
    "purescript_binary_tests_suite",
)

purescript_binary_tests_suite(
    name = "purescript_binary",
)

purs_bundle_tests_suite(
    name = "purs_bundle",
)

purs_compile_module_tests_suite(
    name = "purs_compile_module",
)
