load(
    "@bazel_skylib//rules:build_test.bzl",
    "build_test",
)
load(
    "@joneshf_rules_purescript//purescript:defs.bzl",
    "purescript_library",
)

build_test(
    name = "baz_library_test",
    targets = [
        ":baz_library",
    ],
)

build_test(
    name = "baz_test",
    targets = [
        ":baz",
    ],
)

# If we wanted to manage all of the flags and the usage of `purs-compile-module` by hand,
# we can use a `genrule` like below.
# This is largely to show how it's _possible_ to pass flags around.
# Usage of `purs-compile-module` should be automated by some other tooling.
genrule(
    name = "baz",
    srcs = [
        "//examples/purs-compile-module/dependencies/foo",
        "Baz.purs",
    ],
    outs = [
        "externs.cbor",
    ],
    cmd = " ".join(
        [
            "$(execpath //cmd/purs-compile-module)",
            "--input-externs-file $(execpath //examples/purs-compile-module/dependencies/foo)",
            "--output-signature-externs-file $@",
            "--purs-file $(execpath Baz.purs)",
        ],
    ),
    tools = [
        "//cmd/purs-compile-module",
    ],
    visibility = [
        "//examples/purs-compile-module/dependencies:__subpackages__",
    ],
)

# If we don't want to manage everything ourselves,
# we can use a rule like below.
# This is more likely how we'd actually want to interact with `bazel`.
purescript_library(
    name = "baz_library",
    src = "Baz.purs",
    module = "Baz",
    visibility = [
        "//examples/purs-compile-module/dependencies:__subpackages__",
    ],
    deps = [
        "//examples/purs-compile-module/dependencies/foo:foo_library",
    ],
)
