load(
    "@bazel_skylib//rules:build_test.bzl",
    "build_test",
)
load(
    "@joneshf_rules_purescript//purescript:defs.bzl",
    "purescript_package",
)

build_test(
    name = "i18n_package_test",
    targets = [
        ":i18n_package",
    ],
)

build_test(
    name = "i18n_test",
    targets = [
        ":i18n",
    ],
)

# If we wanted to manage all of the flags and the usage of `purs-compile` by hand,
# we can use a `genrule` like below.
# This is largely to show how it's _possible_ to pass flags around.
# Usage of `purs-compile` should be automated by some other tooling.
genrule(
    name = "i18n",
    srcs = [
        "//examples/purs-compile/dependencies/string",
        "I18n.purs",
    ],
    outs = [
        "output",
    ],
    cmd = " ".join(
        [
            "$(execpath //cmd/purs-compile)",
            "--include $(execpath //examples/purs-compile/dependencies/string)",
            "--output $@",
            "$(execpath I18n.purs)",
        ],
    ),
    tools = [
        "//cmd/purs-compile",
    ],
    visibility = [
        "//examples/purs-compile/dependencies:__subpackages__",
    ],
)

# If we don't want to manage everything ourselves,
# we can use a rule like below.
# This is more likely how we'd actually want to interact with `bazel`.
purescript_package(
    name = "i18n_package",
    srcs = [
        "I18n.purs",
    ],
    visibility = [
        "//examples/purs-compile/dependencies:__subpackages__",
    ],
    deps = [
        "//examples/purs-compile/dependencies/string:string_package",
    ],
)
